<resources>
    <string name="app_name">Lista</string>
    <string name="action_settings">Settings</string>
    <string name="global_cancel">"Cancel"</string>
    <string name="global_create_new">"Create New"</string>
    <string name="global_accept">"Accept"</string>
    <string name="global_new">"new"</string>

    /*AlertDialog create new list*/
    <string name="dialog_new_function_type">"New"</string>
    /*Dialog fragment*/
    /*In case there is a error getting values to display on the Dialog fragment*/
    <string name="dialog_getting_string_title_error">"No Title"</string>
    <string name="dialog_getting_string_message_error">"No Message"</string>
    <string name="dialog_getting_string_error">"Error: Unable complete request"</string>

    /*DialogFragment create new list*/
    <string name="dialog_getting_string_new_title">"New"</string>
    <string name="dialog_getting_string_new_message_name">"Name"</string>
    <string name="dialog_getting_string_new_hint">"New name"</string>
    <string name="dialog_getting_string_description_hint">"Welcome…"</string>
    <string name="dialog_getting_string_description">"Description"</string>
    <string name="dialog_getting_string_name_empty">"Empty name"</string>

    /*DialogFragment create new Manage Functions Money*/
    <string name="dialog_string_integer_description">"Description"</string>
    <string name="dialog_string_integer_value">"Value"</string>
    <string name="dialog_string_integer_description_hint">"Describe value"</string>
    <string name="dialog_string_integer_value_hint">"0"</string>

    /*DialogFragment remainder chooser*/
    <string name="dialog_remainder_chooser_title">"Create a remainder"</string>
    <string name="dialog_remainder_chooser_description_hint">"Remainder"</string>

    <string name="dialog_remainder_chooser_tv_selected_time">"Hour : Minutes"</string>
    <string name="dialog_remainder_chooser_tv_selected_day">"Month/Day/Year"</string>

    <string name="dialog_remainder_chooser_cb_repeat">"Repeat"</string>
    <string name="dialog_remainder_chooser_cb_click_to_change">"Click to change"</string>

    <string name="dialog_remainder_chooser_cb_hour_control">"Hour Control"</string>
    <string name="dialog_remainder_chooser_cb_specific_AM">"AM"</string>
    <string name="dialog_remainder_chooser_cb_specific_PM">"PM"</string>
    <string name="dialog_remainder_chooser_cb_specific_time">"Specific Time"</string>
    <string name="dialog_remainder_chooser_cb_selected_hours">"Selected Hours"</string>

    <string name="dialog_remainder_chooser_cb_date_control">Date Control"</string>
    <string name="dialog_remainder_chooser_cb_specific_day">"Specific Day"</string>
    <string name="dialog_remainder_chooser_cb_selected_dais">"Selected Days"</string>
    <string name="dialog_remainder_chooser_cb_mon">"Mon"</string>
    <string name="dialog_remainder_chooser_cb_Tues">"Tues"</string>
    <string name="dialog_remainder_chooser_cb_Wed">"Wed"</string>
    <string name="dialog_remainder_chooser_cb_Thur">"Thur"</string>
    <string name="dialog_remainder_chooser_cb_Fri">"Fri"</string>
    <string name="dialog_remainder_chooser_cb_Sat">"Sat"</string>
    <string name="dialog_remainder_chooser_cb_Sun">"Sun"</string>

    <string name="dialog_remainder_chooser_cb_weekly">"Weekly"</string>
    <string name="dialog_remainder_chooser_cb_first">"First"</string>
    <string name="dialog_remainder_chooser_cb_second">"Second"</string>
    <string name="dialog_remainder_chooser_cb_third">"Third"</string>
    <string name="dialog_remainder_chooser_cb_forth">"Four"</string>

    <string name="dialog_remainder_chooser_cb_monthly">"Months</string>
    <string name="dialog_remainder_chooser_cb_jan">"Jan"</string>
    <string name="dialog_remainder_chooser_cb_feb">"Feb"</string>
    <string name="dialog_remainder_chooser_cb_mar">"Mar"</string>
    <string name="dialog_remainder_chooser_cb_apr">"Apr"</string>
    <string name="dialog_remainder_chooser_cb_may">"May"</string>
    <string name="dialog_remainder_chooser_cb_jun">"Jun"</string>
    <string name="dialog_remainder_chooser_cb_jul">"Jul"</string>
    <string name="dialog_remainder_chooser_cb_aug">"Aug"</string>
    <string name="dialog_remainder_chooser_cb_sep">"Sep"</string>
    <string name="dialog_remainder_chooser_cb_oct">"Oct"</string>
    <string name="dialog_remainder_chooser_cb_nov">"Nov"</string>
    <string name="dialog_remainder_chooser_cb_dic">"Dic"</string>


    /*DialogFragment icon Chooser*/
    <string name="dialog_icon_chooser_title">"Select an Image"</string>
    <string name="dialog_icon_chooser_change">"Change Icon"</string>

    /*Alert Dialog*/
    /*Delete Dialog*/
    <string name="alert_dialog_delete_message">"Are you trying to delete: "</string>
    <string name="alert_dialog_delete">"Delete"</string>
    <string name="alert_dialog_duplicate">"Duplicate"</string>
    <string name="alert_dialog_delete_message_cancel">"Cancel"</string>
    <string name="alert_dialog_delete_success">"Your selected list was deleted!"</string>

    /*Exit Dialog*/
    <string name="alert_dialog_exit_message">"Are you sure you want to exit"</string>
    <string name="alert_dialog_exit_button">"Exit"</string>
    <string name="alert_dialog_exit_cancel_button">"Cancel"</string>

    /* Database */
    <string name="database_manage_functions_templates_default">"DEFAULT"</string>
    <string name="database_manage_functions_templates_money">"MONEY"</string>
    <string name="database_manage_functions_templates_remainder">"REMAINDER"</string>

    <string name="database_manage_functions_templates_time_remainder">"ONE TIME REMAINDER"</string>
    <string name="database_manage_functions_templates_daily_remainder">"DAILY REMAINDER"</string>
    <string name="database_manage_functions_templates_weekly_remainder">"WEEKLY REMAINDER"</string>
    <string name="database_manage_functions_templates_monthly_remainder">"MONTHLY REMAINDER"</string>
    <string name="database_manage_functions_templates_yearly_remainder">"YEARLY REMAINDER"</string>
    <string name="database_manage_functions_templates_conditional_remainder">"CONDITIONAL REMAINDER"</string>

    /*CardView Main Recycler*/
    <string name="cardView_main_recycler_description">"Image representing Item"</string>
    <string name="title_activity_edit_main_list">ActivityEditMainList</string>

    <!-- Strings used for Activity_Edit_Lists -->
    <string name="activity_edit_lists_name">"Name"</string>
    <string name="activity_edit_lists_description">"Description"</string>
    <string name="activity_edit_lists_save">"Save Changes"</string>

    <!-- Strings used for fragments for navigation -->
    <!-- Strings used for ActivityList -->
    <!-- toolbar strings -->
    <string name="iv_lists_toolbar_content">Image represent list item</string>
    <string name="tv_lists_toolbar_default_content">List description</string>
    <!-- cardView for recycler strings -->
    <string name="cv_lists_text">"It's empty"</string>

    <!-- cardView for recycler strings -->
    <string name="cv_manage_functions_name">"Enter value's description"</string>
    <string name="cv_manage_functions_number">"0"</string>

    <!-- Strings used for fragments for navigation -->
    <string name="title_activity_lists">ActivityLists</string>
    <string name="title_activity_edit_lista">Edit Lista</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_manage_functions">ActivityManageFunctions</string>
</resources>
