<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/LinearLayoutGettingTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/tv_alert_dialog_string_input_name"
            android:text = "@string/dialog_remainder_chooser_title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="4dp">
        </TextView>
        <CheckBox
            android:id="@+id/cb_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_remainder_chooser_cb_repeat" />
        <LinearLayout
            android:id="@+id/ll_container_repeat_specific_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <CheckBox
                android:id="@+id/cb_hour_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_remainder_chooser_cb_hour_control" />
            <RadioGroup
                android:id="@+id/rg_hour_control"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb_repeat_specific_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margins_dialog_alert"
                    android:text="@string/dialog_remainder_chooser_cb_specific_time" />
                <RadioButton
                    android:id="@+id/rb_repeat_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margins_dialog_alert"
                    android:text="@string/dialog_remainder_chooser_cb_selected_hours" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_container_repeat_hour"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:id="@+id/ll_control_specific_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <Button
                    android:id="@+id/b_select_specific_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/margins_dialog_alert"
                    android:layout_marginEnd="@dimen/margins_dialog_alert"
                    android:background="@drawable/rectangle"
                    style="?android:attr/borderlessButtonStyle"
                    android:text="@string/dialog_remainder_chooser_cb_click_to_change" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_control_selected_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <Button
                    android:id="@+id/b_select_hours"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/margins_dialog_alert"
                    android:layout_marginEnd="@dimen/margins_dialog_alert"
                    android:background="@drawable/rectangle"
                    style="?android:attr/borderlessButtonStyle"
                    android:text="@string/dialog_remainder_chooser_cb_click_to_change" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_container_specific_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <CheckBox
                android:id="@+id/cb_Date_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_remainder_chooser_cb_date_control" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <RadioButton
                    android:id="@+id/cb_repeat_specific_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margins_dialog_alert"
                    android:text="@string/dialog_remainder_chooser_cb_specific_day" />
                <RadioButton
                    android:id="@+id/cb_repeat_daily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margins_dialog_alert"
                    android:text="@string/dialog_remainder_chooser_cb_selected_dais" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_container_repeat_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <LinearLayout
                android:id="@+id/ll_control_specific_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <Button
                    android:id="@+id/b_select_specific_day"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/margins_dialog_alert"
                    android:layout_marginEnd="@dimen/margins_dialog_alert"
                    android:background="@drawable/rectangle"
                    style="?android:attr/borderlessButtonStyle"
                    android:text="@string/dialog_remainder_chooser_cb_click_to_change" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_container_selected_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_selector_repeat_specific_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_repeat_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_remainder_chooser_cb_monthly" />

            <LinearLayout
                android:id="@+id/ll_selector_repeat_monthly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_below="@+id/LinearLayoutGettingTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:id="@+id/view_separator_inferior"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_height="1dp"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/dividerHorizontal"/>
        <View
            android:id="@+id/view_separator_bottom"
            android:layout_below="@+id/b_cancel"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/dividerHorizontal"/>
        <View
            android:id="@+id/view_separator_medium"
            android:layout_below="@+id/view_separator_inferior"
            android:layout_above="@+id/view_separator_bottom"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_width="1dp"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"
            android:background="?android:attr/dividerVertical" />
        <Button
            android:id="@+id/b_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_separator_inferior"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/view_separator_medium"
            android:text="@string/global_cancel" />
        <Button
            android:id="@+id/b_new_remainder"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_separator_inferior"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/view_separator_medium"
            android:layout_toStartOf="@+id/view_separator_medium"
            android:text="@string/global_create_new" />
    </RelativeLayout>
</RelativeLayout>