<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/LinearLayoutGettingTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/tv_alert_dialog_string_input_name"
            android:text = "@string/dialog_icon_chooser_title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
        </TextView>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            >
            <LinearLayout
                android:id="@+id/ll_icon_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:layout_below="@+id/LinearLayoutGettingTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <View
            android:id="@+id/view_separator_inferior"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_height="1dp"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/dividerHorizontal"/>
        <View
            android:id="@+id/view_separator_bottom"
            android:layout_below="@+id/b_cancel"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/dividerHorizontal"/>
        <View
            android:id="@+id/view_separator_medium"
            android:layout_below="@+id/view_separator_inferior"
            android:layout_above="@+id/view_separator_bottom"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_width="1dp"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"
            android:background="?android:attr/dividerVertical" />
        <Button
            android:id="@+id/b_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_separator_inferior"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/view_separator_medium"
            android:text="@string/global_cancel" />
        <Button
            android:id="@+id/b_change_icon"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_separator_inferior"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/view_separator_medium"
            android:layout_toStartOf="@+id/view_separator_medium"
            android:text="@string/dialog_icon_chooser_change" />
    </RelativeLayout>
</RelativeLayout>